# poke-rs

./: Cargo.toml  docker-compose.yml
poke/: Cargo.toml
poke-cli/: Cargo.toml
poke-cli/src/: lib.rs
poke-domain/: Cargo.toml
poke-domain/src/: lib.rs  pokemon.rs  trainer.rs
poke-http/: Cargo.toml
poke-http/src/: lib.rs
poke-memory/: Cargo.toml
poke-memory/src/: cache.rs  lib.rs
poke-pokeapi/: Cargo.toml
poke-pokeapi/src/: client.rs  lib.rs  model.rs  repository.rs
poke/src/: main.rs
resources/docker/: Dockerfile
