[package]
name = "poke-http"
version = "0.1.0"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
warp = "0.2"
serde_json = "1.0"

poke-domain = { path = "../poke-domain" }
