[package]
name = "poke-http"
version = "0.1.0"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
warp = "0.2"
serde_json = "1.0"

eventually = { git = "https://github.com/ar3s3ru/eventually-rs" }

poke-domain = { path = "../poke-domain" }
