[package]
name = "poke"
version = "0.1.0"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"

poke-http = { path = "../poke-http" }
