[package]
name = "poke"
version = "0.1.0"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"

eventually = { git = "https://github.com/ar3s3ru/eventually-rs" }
eventually-memory = { git = "https://github.com/ar3s3ru/eventually-rs" }

poke-cli = { path = "../poke-cli" }
poke-domain = { path = "../poke-domain" }
poke-http = { path = "../poke-http" }
poke-memory = { path = "../poke-memory" }
poke-pokeapi = { path = "../poke-pokeapi" }
